--- a/gentoo_install_dexp_atlas.html
+++ b/gentoo_install_dexp_atlas.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FCH23CT23R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FCH23CT23R');
+</script>
     <meta charset="UTF-8" content="text/html" http-equiv="Content-Type">
     <meta name="description" content="Install Gentoo Linux on DEXP Atlas A15-I3W400">
     <meta name="keywords" content="hardware, gentoo, linux, laptop, notebook, DEXP">
