--- a/gentoo_install_dexp_atlas.html
+++ b/gentoo_install_dexp_atlas.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="Install Gentoo Linux on DEXP Atlas A15-I3W400">
     <title>Установка Gentoo Linux на ноутбук DEXP Atlas A15-I3W400.</title>
     <link rel="stylesheet" type="text/css" href="./day.css">
-
+<meta name="google-site-verification" content="Jv3ivMI85y64xgbGik-1iHQbpyNyKmnBGA8UhaIa3DA" />
 </head>
 <body>
 <h1>Установка Gentoo Linux на ноутбук DEXP Atlas A15-I3W400.</h1>
