--- a/gentoo_install_dexp_atlas.html
+++ b/gentoo_install_dexp_atlas.html
@@ -256,7 +256,7 @@ Camera lock, замок Kensington
     Microsoft reserved partitition (16 МБ), раздел под систему Windows (NTFS 250 ГБ) и раздел под данные Windows (NTFS
     320 ГБ). Эти разделы создал с установочной флешки Windows. Остальную разметку будем делать уже с установочной флешки
     Gentoo Linux.</p>
-<p>Установка Windows проходит без осложнений. После установки ставим драйвера выложенные на сайте <a href="https://drv.dns-shop.ru/1.%20drivers/1.%20drivers/Noutbook/9111265%2C9111266%20/9111265%2C9111266.zip">ДНС</a>. Все работает.</p>
+<p>Установка Windows проходит без осложнений. После установки ставим драйвера выложенные на сайте <a href="https://drv.dns-shop.ru/1.%20drivers/1.%20drivers/Noutbook/9111265%2C9111266%20/9111265%2C9111266.zip">ДНС</a>. Также я выложил архив с драйверами на <a href="https://github.com/maxborshevnikov/maxborshevnikov.github.io/releases/download/%23drivers/dexp_atlas_a15_i3w400.zip">Github</a> на случай проблем с сайтом ДНС. Все работает.</p>
 <p>Далее качаем образ диска <a href="https://www.gentoo.org/downloads/">LiveGUI
     USB Image</a> для архитектуры AMD64 и сразу качаем Stage3 архив для профиля desktop
     profile | openrc.</p>
