--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="keywords" content="hardware, gentoo, linux, laptop, notebook, DEXP">
     <meta name="author" content="Maxim Borshevnikov">
     <meta property="og:description" content="Install Gentoo Linux on DEXP Atlas A15-I3W400">
-    <title>Установка Gentoo Linux на ноутбук DEXP Atlas A15-I3W400.</title>
+    <title>Installing Gentoo Linux on a DEXP Atlas A15-I3W400 laptop.</title>
     <link rel="stylesheet" type="text/css" href="./day.css">
 <meta name="google-site-verification" content="Jv3ivMI85y64xgbGik-1iHQbpyNyKmnBGA8UhaIa3DA" />
 </head>
