--- a/privacyPicRes.html
+++ b/privacyPicRes.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" content="text/html" http-equiv="Content-Type">
-    <meta name="author" content="Maxim Borshevnikov">
+<meta charset="UTF-8" content="text/html" http-equiv="Content-Type">
+<meta name="author" content="Maxim Borshevnikov">
 <title>Picture resizer application for Android.</title>
 </head>
 <body>
-<h1>Privacy policy of Picture Resizer application.</h1>
-<p>Picture Resizer application doesn't collect and transfer any personal data from your device.</p>
-<p>Permission to show Notifications requested just only for running foreground service to make resizing jobs.</p>
-<p>Feel free for contact with any question with me - <a href="mailto:maxborshevnikov@mail.ru">© Maxim Borshevnikov, 2025</a>.</p>
+	<h1>Privacy policy of Picture Resizer application.</h1>
+	<p>Picture Resizer application doesn't collect and transfer any
+		personal data from your device.</p>
+	<p>Permission to show Notifications requested just only for running
+		foreground service to make resizing jobs.</p>
+	<p>For devices prior Android 10 this application request permission
+		for read and write files on external storages.</p>
+
+
+	<p>
+		Feel free for contact with any question with me - <a
+			href="mailto:maxborshevnikov@mail.ru">© Maxim Borshevnikov, 2025</a>.
+	</p>
 </body>
 </html>
